<resources>
    <string name="app_name">Movie Catalogues</string>
    <string name="title_movie">Movies</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="title_favorite">Favorite</string>
    <string name="movies">MOVIES</string>
    <string name="tv_shows">TV SHOWS</string>
    <string name="favorite">FAVORITE</string>
    <string name="title">Title</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="overview">Overview</string>
    <string name="genre">Genre</string>
    <string name="duration">Duration</string>
    <string name="title_activity_detail_tv_show">Detail Tv Show</string>
    <string name="seasons">Seasons</string>
    <string name="episodes">Episodes</string>
    <string name="premiered">Premiered</string>
    <string name="release">Release Date :</string>
    <string name="splash_title">Movie Catalogue</string>
    <string name="poster">Poster</string>
    <string name="tagline">Tagline</string>
    <string name="status">Status</string>
    <string name="share_button">Share Button</string>
    <string name="date_icon">Date Icon</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="error">Something went wrong</string>
    <string name="no_connection">No Connection</string>
    <string name="splash_screen">Splash Screen</string>
</resources>